--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -89,22 +89,44 @@
 	<PreferenceCategory
 		android:key="settings_status_chat"
 		android:layout="@layout/my_category_preference"
-		android:title="@string/settings_chat_status">
+		android:title="@string/chat_status_title">
 		<!--        android:textColor="@color/pressed_mega">  -->
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
 			android:key="settings_status_chat_online"
-			android:title="@string/settings_chat_status_online" />
+			android:title="@string/online_status" />
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
-			android:key="settings_status_chat_invisible"
-			android:title="@string/settings_chat_status_invisible" />
+			android:key="settings_status_chat_away"
+			android:title="@string/away_status" />
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
 			android:key="settings_status_chat_offline"
-			android:title="@string/settings_chat_status_offline" />
+			android:title="@string/offline_status" />
 
 	</PreferenceCategory>
+
+	<PreferenceCategory
+		android:key="settings_autoaway_chat"
+		android:layout="@layout/my_category_preference"
+		android:title="@string/settings_autoaway_title">
+
+		<mega.privacy.android.app.components.TwoLineCheckPreference
+			android:key="settings_autoaway_chat_checkpreference"
+			android:title="@string/settings_autoaway_subtitle" />
+
+	</PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="settings_persistence_chat"
+        android:layout="@layout/my_category_preference"
+        android:title="@string/settings_persistence_title">
+
+        <mega.privacy.android.app.components.TwoLineCheckPreference
+            android:key="settings_persistence_chat_checkpreference"
+            android:title="@string/settings_persistence_subtitle" />
+
+    </PreferenceCategory>
 
 	<PreferenceCategory
 		android:key="settings_notifications_chat"
