--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -86,20 +86,20 @@
 
 	<PreferenceCategory
 		android:key="settings_status_chat"
-		android:title="@string/settings_chat_status">
+		android:title="@string/chat_status_title">
 		<!--        android:textColor="@color/pressed_mega">  -->
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
 			android:key="settings_status_chat_online"
-			android:title="@string/settings_chat_status_online" />
+			android:title="@string/online_status" />
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
-			android:key="settings_status_chat_invisible"
-			android:title="@string/settings_chat_status_invisible" />
+			android:key="settings_status_chat_away"
+			android:title="@string/away_status" />
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
 			android:key="settings_status_chat_offline"
-			android:title="@string/settings_chat_status_offline" />
+			android:title="@string/offline_status" />
 
 	</PreferenceCategory>
 
