--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -15,4 +15,11 @@
 		<item>1002</item>
 		<item>1003</item>
 	</string-array>
+
+	<string-array name="settings_chat_status_values">
+		<item>4</item>
+		<item>3</item>
+		<item>2</item>
+		<item>1</item>
+	</string-array>
 </resources>
