--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -91,6 +91,7 @@
     <color name="gradient_avatar_chat">#44000000</color>
 
     <color name="status_connected">#13e03c</color>
+    <color name="status_busy">#eb4444</color>
 
     <color name="participants_layout">#f2f2f2</color>
     <color name="status_invisible_layout">#bfbfbf</color>
