Task #6422 - Improve autoaway preference to allow changing minutes without enable/disable

--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -105,8 +105,12 @@
 		android:layout="@layout/my_category_preference"
 		android:title="@string/settings_autoaway_title">
 
-		<mega.privacy.android.app.components.TwoLineCheckPreference
-			android:key="settings_autoaway_chat_checkpreference"
+		<SwitchPreference
+			android:key="settings_autoaway_chat_switch"
+			android:title="@string/settings_autoaway_title"/>
+
+		<Preference
+			android:key="settings_autoaway_chat_preference"
 			android:title="@string/settings_autoaway_subtitle" />
 
 	</PreferenceCategory>
