Task #6422 - Improve autoaway preference to allow changing minutes without enable/disable

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -102,7 +102,11 @@
 		android:title="@string/settings_autoaway_title">
 
 		<mega.privacy.android.app.components.TwoLineCheckPreference
-			android:key="settings_autoaway_chat_checkpreference"
+			android:key="settings_autoaway_chat_switch"
+			android:title="@string/settings_autoaway_title"/>
+
+		<Preference
+			android:key="settings_autoaway_chat_preference"
 			android:title="@string/settings_autoaway_subtitle" />
 
 	</PreferenceCategory>
