--- a/app/src/main/res/layout/chat_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/chat_item_bottom_sheet.xml
@@ -64,6 +64,8 @@
                 android:layout_height="6dp"
                 android:layout_alignTop="@id/chat_list_chat_name_text"
                 android:layout_toRightOf="@id/chat_list_chat_name_text"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="6dp"
                 android:background="@null"
                 android:src="@drawable/circle_status_contact_offline" />
 
