--- a/app/src/main/res/layout/chat_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/chat_item_bottom_sheet.xml
@@ -169,7 +169,7 @@
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
-            android:src="@drawable/ic_ignore"
+            android:src="@drawable/ic_clear_history"
             android:visibility="visible" />
 
         <TextView
