--- a/app/src/main/res/menu/messages_chat_action.xml
+++ b/app/src/main/res/menu/messages_chat_action.xml
@@ -7,14 +7,14 @@
         android:orderInCategory="105"
         android:title="@string/title_edit_profile_info"
         MEGA:showAsAction="always"
-        android:icon="@drawable/ic_mode_edit_white_24dp"/>
+        android:icon="@drawable/ic_rename_white"/>
 
     <item
         android:id="@+id/chat_cab_menu_copy"
         android:orderInCategory="105"
         android:title="@string/context_copy"
         MEGA:showAsAction="always"
-        android:icon="@drawable/ic_content_copy_white"/>
+        android:icon="@drawable/ic_copy_white"/>
 
     <item
         android:id="@+id/chat_cab_menu_delete"
