QA report #6519 - Contact's Modal bottom sheet on "shared with" screen with inconsistencies

--- a/app/src/main/res/layout/bottom_sheet_file_contact_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_file_contact_list.xml
@@ -138,7 +138,7 @@
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
             android:layout_marginLeft="18dp"
-            android:text="@string/context_delete"
+            android:text="@string/context_remove"
             android:textColor="@color/name_my_account"
             android:textSize="16sp"/>
     </LinearLayout>
