QA report #6520 - New Assets for contact's modal bottom sheet on "shared with" screen

--- a/app/src/main/res/layout/bottom_sheet_file_contact_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_file_contact_list.xml
@@ -128,7 +128,7 @@
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
-            android:src="@drawable/ic_shared_with"
+            android:src="@drawable/ic_change_permissions"
             android:visibility="visible" />
 
         <TextView
@@ -159,7 +159,7 @@
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
-            android:src="@drawable/ic_remove_share"
+            android:src="@drawable/ic_remove"
             android:visibility="visible" />
 
         <TextView
