--- a/app/src/main/res/layout/fragment_filebrowserlist.xml
+++ b/app/src/main/res/layout/fragment_filebrowserlist.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".FileBrowserListFragment" >-
+    tools:context=".FileBrowserListFragment" >
 
     <RelativeLayout
         android:id="@+id/content_text_layout"
@@ -11,47 +11,27 @@
         android:layout_height="36dp"
         android:background="@color/new_background_fragment">
 
-		<RelativeLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:id="@+id/content_text_nested_layout"
-			android:layout_centerVertical="true">
-
 			<TextView
 				android:id="@+id/content_text"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:textColor="@color/mail_my_account"
+                android:layout_centerVertical="true"
 				android:layout_marginLeft="72dp"
 				android:textSize="14sp" />
-		</RelativeLayout>
-        
-       <ProgressBar
-		    android:id="@+id/file_list_download_progress_bar"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content" 
-			android:layout_below="@id/content_text_nested_layout"
-			style="@style/UsedSpaceProgressBar"
-			android:visibility="gone"/>
-       
-       <ImageView
-	        android:id="@+id/file_list_transfer_arrow"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_chevron_right_grey"
-	        android:layout_above="@id/file_list_download_progress_bar" 
-	        android:layout_alignParentRight="true" 
-	        android:visibility="gone"/>     
+
     </RelativeLayout>
 
-    <View
-        android:id="@+id/separator"
-        android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_below="@id/content_text_layout"
-        android:background="@color/delimiterColor" />
+	<View
+		android:id="@+id/separator"
+		android:layout_width="fill_parent"
+		android:layout_height="1dip"
+		android:layout_below="@id/content_text_layout"
+		android:background="@color/delimiterColor" />
 
-    <ImageView
+	<include layout="@layout/item_transfers_overview"/>
+
+	<ImageView
         android:id="@+id/file_list_empty_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
