--- a/app/src/main/res/layout/fragment_inboxgrid.xml
+++ b/app/src/main/res/layout/fragment_inboxgrid.xml
@@ -11,37 +11,14 @@
         android:layout_height="36dp"
         android:background="@color/new_background_fragment">
 
-		<RelativeLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:id="@+id/inbox_content_grid_text_nested_layout"
-			android:layout_centerVertical="true">
-
 			<TextView
 				android:id="@+id/inbox_content_grid_text"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:layout_centerVertical="true"
 				android:textColor="@color/mail_my_account"
 				android:layout_marginLeft="72dp"
 				android:textSize="14sp" />
-		</RelativeLayout>
-        
-       <ProgressBar
-		    android:id="@+id/inbox_grid_download_progress_bar"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content" 
-			android:layout_below="@id/inbox_content_grid_text_nested_layout"
-			style="@style/UsedSpaceProgressBar"
-			android:visibility="gone"/>
-       
-      <ImageView
-	        android:id="@+id/inbox_grid_transfer_arrow"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_chevron_right_grey"
-	        android:layout_above="@id/inbox_grid_download_progress_bar" 
-	        android:layout_alignParentRight="true" 
-	        android:visibility="gone"/> 
     </RelativeLayout>
 
     <mega.privacy.android.app.components.CustomizedGridRecyclerView
