--- a/app/src/main/res/layout/bottom_sheet_contact_file_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_contact_file_list.xml
@@ -77,6 +77,7 @@
                 android:id="@+id/contact_file_list_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.35"
                 android:background="@null"/>
 
         </RelativeLayout>
