--- a/app/src/main/res/layout/bottom_sheet_node_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_node_item.xml
@@ -74,6 +74,7 @@
                 android:id="@+id/node_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.35"
                 android:background="@null"/>
 
         </RelativeLayout>
