--- a/app/src/main/res/layout/item_file_explorer.xml
+++ b/app/src/main/res/layout/item_file_explorer.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_permissions_full_access"
+        android:alpha="0.35"
         android:background="@null"
         android:paddingLeft="10dp"
         android:layout_alignParentRight="true"
