--- a/app/src/main/res/layout/item_file_list.xml
+++ b/app/src/main/res/layout/item_file_list.xml
@@ -57,6 +57,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:src="@drawable/ic_permissions_full_access"
+		android:alpha="0.35"
 		android:background="@null"
 		android:layout_marginRight="12dp"
 		android:layout_marginLeft="12dp"
@@ -69,8 +70,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/link_ic"
-		android:background="@null" 
-		android:tint="@color/transparency_white"
+		android:background="@null"
+		android:alpha="0.35"
         android:layout_centerVertical="true"
 		android:layout_marginRight="12dp"
 		android:layout_marginLeft="12dp"
