--- a/app/src/main/res/layout/item_transfers_list.xml
+++ b/app/src/main/res/layout/item_transfers_list.xml
@@ -63,9 +63,9 @@
         android:id="@+id/transfers_list_option_pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_item_pause"
+        android:src="@drawable/ic_pause"
         android:background="@null"
-        android:tint="@color/transparency_white"
+        android:alpha="0.54"
         android:layout_centerVertical="true"
         android:layout_marginRight="12dp"
         android:layout_marginLeft="12dp"
