--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -67,6 +67,12 @@
                         android:background="@color/mega"
                         style="@style/MyCustomTabLayout"/>
 
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/sliding_tabs_transfers"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/mega"
+                        style="@style/MyCustomTabLayout"/>
 
             </android.support.design.widget.AppBarLayout>
 
@@ -92,6 +98,12 @@
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/my_account_tabs_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/transfers_tabs_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
