--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -383,9 +383,18 @@
                 android:layout_alignParentBottom="true">
 
                 <TextView
+                    android:id="@+id/user_typing_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:textSize="12sp"/>
+
+                <TextView
                     android:id="@+id/user_typing_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:layout_alignRight="@+id/user_typing_name"
                     android:textSize="12sp"/>
             </RelativeLayout>
 
