--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -378,7 +378,7 @@
                 android:id="@+id/user_typing_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="36dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginBottom="5dp"
                 android:layout_alignParentBottom="true">
 
@@ -386,7 +386,10 @@
                     android:id="@+id/user_typing_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/name_my_account"
                     android:ellipsize="end"
+                    android:singleLine="true"
+                    android:lines="1"
                     android:textSize="12sp"/>
 
                 <TextView
@@ -394,7 +397,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:layout_alignRight="@+id/user_typing_name"
+                    android:layout_toRightOf="@+id/user_typing_name"
                     android:textSize="12sp"/>
             </RelativeLayout>
 
