QA report #6607 - Copy/move an item to a new created folder -> after creation the user is not inside the folder

--- a/app/src/main/res/layout/item_file_explorer.xml
+++ b/app/src/main/res/layout/item_file_explorer.xml
@@ -44,6 +44,7 @@
         android:alpha="0.35"
         android:background="@null"
         android:paddingLeft="10dp"
+        android:layout_marginRight="16dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:visibility="gone"/>
