--- a/app/src/main/res/layout/activity_chat_contact_properties.xml
+++ b/app/src/main/res/layout/activity_chat_contact_properties.xml
@@ -8,56 +8,57 @@
     android:fitsSystemWindows="true"
     android:background="@color/white"
     tools:context=".lollipop.ContactInfoActivityLollipop">
+
         <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapse_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fitsSystemWindows="true"
                 app:collapsedTitleTextAppearance="@style/ToolbarTitle"
                 app:contentScrim="?attr/colorPrimary"
                 app:theme="@style/CollapsingToolbarContactInfo"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <RelativeLayout
-                    android:id="@+id/chat_contact_properties_image_layout"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/transparent_black"
+                    android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax"
                     android:fitsSystemWindows="true" >
 
-                    <TextView
-                        android:id="@+id/chat_contact_properties_toolbar_initial_letter"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:paddingBottom="5dp" />
+                    <RelativeLayout
+                        android:id="@+id/chat_contact_properties_image_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/chat_contact_properties_toolbar_image"
+                        <TextView
+                            android:id="@+id/chat_contact_properties_toolbar_initial_letter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:paddingBottom="5dp" />
+
+                        <ImageView
+                            android:id="@+id/chat_contact_properties_toolbar_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:fitsSystemWindows="true"
+                            android:scaleType="centerCrop" />
+                    </RelativeLayout>
+
+                    <View
+                        android:id="@+id/gradient_view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitCenter" />
+                        android:background="@drawable/full_gradient_shape" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="112dp"
-                        android:layout_alignParentTop="true"
-                        android:background="@drawable/gradient_shape" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="@drawable/actionbar_gradient_dark" />
-                </RelativeLayout>
+                </FrameLayout>
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
