--- a/app/src/main/res/layout/transfer_overquota_layout.xml
+++ b/app/src/main/res/layout/transfer_overquota_layout.xml
@@ -4,9 +4,11 @@
     android:layout_height="395dp">
 
     <TextView
+        android:id="@+id/transfer_overquota_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:layout_marginTop="24dp"
         android:textColor="@color/name_my_account"
         android:layout_gravity="center_horizontal"/>
 
@@ -14,28 +16,46 @@
         android:id="@+id/image_transfer_overquota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
         android:layout_gravity="center_horizontal"/>
 
     <TextView
+        android:id="@+id/text_transfer_overquota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="30dp"
         android:textSize="16sp"
         android:textColor="@color/mail_my_account"
         android:layout_gravity="center_horizontal"/>
 
     <Button
+        android:id="@+id/transfer_overquota_button_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/accentColor"
+        android:background="@android:color/transparent"
+        android:text="@string/button_depleted_transfer_overquota"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="16dp"
         android:layout_gravity="right"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
         android:stateListAnimator="@null"/>
 
     <Button
-        android:id="@+id/transfer_overquota_accounts"
+        android:id="@+id/transfer_overquota_button_payment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/accentColor"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginRight="16dp"
         android:layout_gravity="right"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:stateListAnimator="@null"/>
 
 </LinearLayout>
