--- a/app/src/main/res/layout/item_message_chat.xml
+++ b/app/src/main/res/layout/item_message_chat.xml
@@ -152,14 +152,69 @@
                     android:inputType="textMultiLine|textNoSuggestions"
                     android:background="@drawable/rounded_text_view_chat_own_message"
                     android:padding="9dp"
-                    android:gravity="right"/>
-                
+                    android:gravity="left"/>
+
                 <ImageView
-                    android:id="@+id/content_own_message_image"
-                    android:layout_width="160dp"
-                    android:layout_height="220dp"
+                    android:id="@+id/content_own_message_thumb_portrait"
+                    android:layout_width="wrap_content"
+                    android:layout_height="212dp"
                     android:layout_alignParentRight="true"
-                    />
+                    android:scaleType="fitCenter"/>
+
+                <ImageView
+                    android:id="@+id/content_own_message_thumb_landscape"
+                    android:layout_width="wrap_content"
+                    android:layout_height="212dp"
+                    android:layout_alignParentRight="true"
+                    android:scaleType="fitCenter"/>
+
+                <RelativeLayout
+                    android:id="@+id/content_own_message_file_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_text_view_chat_own_message"
+                    android:layout_alignParentLeft="true"
+                    android:gravity="left">
+
+                    <ImageView
+                        android:id="@+id/content_own_message_file_thumb"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="6dp"
+                        android:layout_centerVertical="true"/>
+
+                    <TextView
+                        android:id="@+id/content_own_message_file_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/name_my_account"
+                        android:layout_toRightOf="@+id/content_own_message_file_thumb"
+                        android:textSize="14sp"
+                        android:layout_marginTop="11dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="8dp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="middle"
+                        android:gravity="left"/>
+
+                    <TextView
+                        android:id="@+id/content_own_message_file_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/mail_my_account"
+                        android:layout_toRightOf="@+id/content_own_message_file_thumb"
+                        android:layout_below="@+id/content_own_message_file_name"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="11dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="8dp"
+                        android:inputType="textMultiLine|textNoSuggestions"
+                        android:gravity="left"/>
+
+                </RelativeLayout>
+                <!--End RelativeLayout file-->
 
                 <ImageView
                     android:id="@+id/own_triangle_icon"
@@ -168,7 +223,9 @@
                     android:layout_centerVertical="true"
                     android:gravity="right"
                     android:background="@drawable/ic_input_warning"/>
-             </RelativeLayout>
+
+            </RelativeLayout>
+            <!--End RelativeLayout own content message-->
 
             <TextView
                 android:id="@+id/not_sent_own_message_text"
@@ -183,9 +240,6 @@
                 android:gravity="right"/>
 
         </RelativeLayout>
-
-
-
     </RelativeLayout>
 
     <!--CONTACT LAYOUT MESSAGE -->
@@ -299,6 +353,89 @@
                 android:background="@drawable/rounded_text_view_chat_contact_message"
                 android:padding="9dp"
                 android:gravity="left"/>
+
+            <ImageView
+                android:id="@+id/content_contact_message_thumb_portrait"
+                android:layout_width="wrap_content"
+                android:layout_height="212dp"
+                android:layout_alignParentLeft="true"
+                android:scaleType="fitCenter"/>
+
+            <ImageView
+                android:id="@+id/content_contact_message_thumb_landscape"
+                android:layout_width="wrap_content"
+                android:layout_height="212dp"
+                android:layout_alignParentLeft="true"
+                android:scaleType="fitCenter"/>
+
+            <RelativeLayout
+                android:id="@+id/content_contact_message_file_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_text_view_chat_contact_message"
+                android:layout_alignParentLeft="true"
+                android:gravity="left">
+
+                <TextView
+                    android:id="@+id/content_contact_message_file_sender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginRight="8dp"
+                    android:gravity="left"/>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/content_contact_message_file_sender">
+
+                    <ImageView
+                        android:id="@+id/content_contact_message_file_thumb"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="6dp"
+                        android:layout_centerVertical="true"/>
+
+                    <TextView
+                        android:id="@+id/content_contact_message_file_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/name_my_account"
+                        android:layout_toRightOf="@+id/content_contact_message_file_thumb"
+                        android:textSize="14sp"
+                        android:layout_marginTop="11dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="8dp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="middle"
+                        android:gravity="left"/>
+
+                    <TextView
+                        android:id="@+id/content_contact_message_file_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/mail_my_account"
+                        android:layout_toRightOf="@+id/content_contact_message_file_thumb"
+                        android:layout_below="@+id/content_contact_message_file_name"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="11dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="8dp"
+                        android:inputType="textMultiLine|textNoSuggestions"
+                        android:gravity="left"/>
+
+                </RelativeLayout>
+
+
+
+            </RelativeLayout>
+            <!--End RelativeLayout file-->
+
+
 
         </RelativeLayout>
 
