Bug #6689 - (Google Play Console) Null pointer on finish tranfer in grid view

--- a/app/src/main/res/layout/fragment_filebrowserlist.xml
+++ b/app/src/main/res/layout/fragment_filebrowserlist.xml
@@ -23,7 +23,7 @@
     </RelativeLayout>
 
 	<View
-		android:id="@+id/separator"
+		android:id="@+id/separator_file_browser"
 		android:layout_width="fill_parent"
 		android:layout_height="1dip"
 		android:layout_below="@id/content_text_layout"
